--- a/styles/custom-classes.scss
+++ b/styles/custom-classes.scss
@@ -25,7 +25,7 @@
 
 
 .content {
-    margin-top: 70px;
+    margin-top: 120px;
 }
 
 .App {
@@ -73,3 +73,13 @@
 }
 .embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } 
 .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+
+.navbar-affix {
+  transition: all 1s;
+  font-size: 22px;
+  padding: 20px;
+}
+.navbar-affixed {
+  padding: 0;
+  transition: all 1s;
+}
